# 4zp6

./: .gitignore  LICENSE  README.md  go.mod  go.sum  scheduler_proto.cc
backend/: .dockerignore  Caddyfile  Caddyfile-production  Dockerfile  README.md  docker-compose-production.yml  docker-compose.yml  go.mod  main.go
backend/assets/: index.html
backend/config/: config.env  secret.env
backend/controller/: go.mod  go.sum  main.go
backend/latex/: gohierarchy.drawio.xml
backend/mqtt/: mqtt.go
backend/telemetry/: Telemetry.pb.go  Telemetry.proto  build.sh  nanopb.proto
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: App.js  Throttle.js
docs/: DecDel.latex  FinDoc.latex  architecture.drawio.xml  delOct.latex  interaction.drawio.xml  sepdel_tanner.latex  sepdev_emily.latex
mock/: go.mod  go.sum  main.go
mock/schedule/: mqtt.go  schedule.go
protocol/: Makefile  Telemetry.proto  telemetry.proto
protocol/cc/: Telemetry.pb.c  Telemetry.pb.h  library.json
protocol/go/: Telemetry.pb.go
prototypes/: .gitignore  Doxyfile  README.md  notes.md  platformio.ini  string.py
prototypes/include/: I2CManager.h  I2CPeripheral.h  I2CReadManager.h  I2CRuntime.h  MQTTManager.h  Scheduler.h  TelemetryProtocol.h  WiFiProvisioning.h  header.h  index.html  index.html._cc
prototypes/latex/: _i2_c_manager_8cpp.tex  (+39 more)
sht31-controller/: .gitignore  ChangeLog.md  LICENSE  Main.hs  README.md  Stub.hs  Support.hs  package.yaml  sht31-controller.cabal
sht31-controller/app/: Main.hs  Stub.hs
software-prototype/: README.md  go.mod  go.sum  main.go
(+35 files in other folders)
