name:                sht31-controller
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Emily Horsman
maintainer:          me@emilyhorsman.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable sht31-controller
  main-is:             Main.hs
  other-modules:       Support
  other-extensions:    OverloadedStrings, NamedFieldPuns, DeriveGeneric
  build-depends:       base >=4.11 && <4.12, base64-bytestring >= 1.1 && <1.2, bytestring >=0.10 && <0.11, text >=1.2 && <1.3, amqp >=0.18 && <0.19, aeson >=1.4 && <1.5, containers >=0.5 && <0.6
  -- hs-source-dirs:
  default-language:    Haskell2010
